[gd_scene load_steps=22 format=3 uid="uid://df525dujavlyd"]

[ext_resource type="Script" uid="uid://crsmg8g5yemts" path="res://scenes/game/MainMenu/MainMenu.gd" id="1_7fekw"]
[ext_resource type="FontFile" uid="uid://b24q2b3mx6mx7" path="res://assets/fonts/press-start-2p-v6.woff2" id="1_87rnb"]
[ext_resource type="Texture2D" uid="uid://tra00nxobp22" path="res://assets/images/Outside castle/back.png" id="2_xfymh"]
[ext_resource type="Texture2D" uid="uid://c68b8nxud88e" path="res://assets/images/Outside castle/middle.png" id="3_rdpox"]
[ext_resource type="Texture2D" uid="uid://b5k4ucg3lry0c" path="res://assets/images/Outside castle/front.png" id="4_6jrop"]
[ext_resource type="PackedScene" uid="uid://dbfh1alqkfy2t" path="res://scenes/ui/SceneTransition/SceneTransition.tscn" id="4_lkwgi"]
[ext_resource type="Texture2D" uid="uid://bmo4yjt51xnuv" path="res://assets/images/Outside castle/front2.png" id="5_6dwwi"]
[ext_resource type="Theme" uid="uid://bw0f56ba8yukh" path="res://themes/wood_menu.tres" id="6_c3bsr"]
[ext_resource type="Texture2D" uid="uid://b6rc7nq7sc8kd" path="res://assets/images/Outside castle/front3.png" id="6_d3jgr"]
[ext_resource type="Texture2D" uid="uid://daw5yhy2b3jje" path="res://assets/images/Outside castle/front4.png" id="7_25owc"]
[ext_resource type="Texture2D" uid="uid://dxcvgudbobo1x" path="res://assets/images/Pix_Socials Square.png" id="8_bvnvu"]
[ext_resource type="FontFile" uid="uid://t17ntd6k15d0" path="res://assets/fonts/PixeloidSans-Bold.otf" id="8_ho80n"]
[ext_resource type="PackedScene" uid="uid://bvomsgp50xmqo" path="res://scenes/ui/InputHint/InputHint.tscn" id="10_d3jgr"]
[ext_resource type="PackedScene" uid="uid://qbwqcgn7su0n" path="res://scenes/ui/SettingsMenu/SettingsMenu.tscn" id="14_d3jgr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_krrbd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_6dwwi")
}, {
"duration": 1.0,
"texture": ExtResource("6_d3jgr")
}, {
"duration": 1.0,
"texture": ExtResource("7_25owc")
}, {
"duration": 1.0,
"texture": ExtResource("4_6jrop")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_n41tu"]
font = ExtResource("1_87rnb")
font_size = 40
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_c3bsr"]
font = ExtResource("1_87rnb")
font_size = 30
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 6)

[sub_resource type="LabelSettings" id="LabelSettings_h1r82"]
font = ExtResource("8_ho80n")

[sub_resource type="AtlasTexture" id="AtlasTexture_bvnvu"]
atlas = ExtResource("8_bvnvu")
region = Rect2(2, 142, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho80n"]
atlas = ExtResource("8_bvnvu")
region = Rect2(102, 182, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1r82"]
atlas = ExtResource("8_bvnvu")
region = Rect2(22, 22, 16, 16)

[node name="MainMenu" type="Node2D" unique_id=417216980]
script = ExtResource("1_7fekw")

[node name="UiLayer" type="CanvasLayer" parent="." unique_id=949951056]

[node name="ColorRect" type="ColorRect" parent="UiLayer" unique_id=151206076]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.13725491, 0.11764706, 0.15686275, 1)

[node name="MarginContainer" type="MarginContainer" parent="UiLayer" unique_id=1126040818]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="UiLayer/MarginContainer" unique_id=27598107]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UiLayer/MarginContainer/CenterContainer" unique_id=5276728]
texture_filter = 1
layout_mode = 2

[node name="Back" type="Sprite2D" parent="UiLayer/MarginContainer/CenterContainer/MarginContainer" unique_id=1008848709]
scale = Vector2(5, 5)
texture = ExtResource("2_xfymh")

[node name="Middle" type="Sprite2D" parent="UiLayer/MarginContainer/CenterContainer/MarginContainer" unique_id=2086568237]
scale = Vector2(5, 5)
texture = ExtResource("3_rdpox")

[node name="Front" type="Sprite2D" parent="UiLayer/MarginContainer/CenterContainer/MarginContainer" unique_id=467611439]
visible = false
scale = Vector2(4, 4)
texture = ExtResource("4_6jrop")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UiLayer/MarginContainer/CenterContainer/MarginContainer" unique_id=417783600]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_krrbd")
autoplay = "default"

[node name="VBoxContainer" type="VBoxContainer" parent="UiLayer/MarginContainer" unique_id=565814895]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="CenterContainer" type="MarginContainer" parent="UiLayer/MarginContainer/VBoxContainer" unique_id=777590184]
layout_mode = 2

[node name="Label" type="Label" parent="UiLayer/MarginContainer/VBoxContainer/CenterContainer" unique_id=202452815]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_87rnb")
theme_override_font_sizes/font_size = 0
text = "Olaf and 
the Crowning Hangover"
label_settings = SubResource("LabelSettings_n41tu")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UiLayer/MarginContainer/VBoxContainer/CenterContainer" unique_id=1929797521]
layout_mode = 2
theme_override_constants/margin_top = 110

[node name="Label2" type="Label" parent="UiLayer/MarginContainer/VBoxContainer/CenterContainer/MarginContainer" unique_id=913826833]
layout_mode = 2
text = "Demo"
label_settings = SubResource("LabelSettings_c3bsr")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UiLayer/MarginContainer/VBoxContainer" unique_id=141281480]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 10

[node name="Play" type="Button" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer" unique_id=938880064]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
focus_next = NodePath("../../MarginContainer4/Settings")
theme = ExtResource("6_c3bsr")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="InputHint" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer/Play" unique_id=1426175463 instance=ExtResource("10_d3jgr")]
layout_mode = 1
anchors_preset = -1
offset_left = 300.0
offset_top = 104.0
offset_right = 300.0
offset_bottom = 104.0
hint_offset = Vector2(0, -16)

[node name="MarginContainer4" type="MarginContainer" parent="UiLayer/MarginContainer/VBoxContainer" unique_id=27200002]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Settings" type="Button" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer4" unique_id=558050094]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_next = NodePath("../../MarginContainer6/Wishlist")
focus_previous = NodePath("../../MarginContainer/Play")
theme = ExtResource("6_c3bsr")
text = "Settings"

[node name="InputHint" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer4/Settings" unique_id=1575382252 instance=ExtResource("10_d3jgr")]
layout_mode = 1
anchors_preset = -1
offset_left = 200.0
offset_top = 62.0
offset_right = 200.0
offset_bottom = 62.0
hint_offset = Vector2(0, -8)

[node name="MarginContainer6" type="MarginContainer" parent="UiLayer/MarginContainer/VBoxContainer" unique_id=832230890]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Wishlist" type="Button" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer6" unique_id=997022602]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 80)
layout_mode = 2
focus_next = NodePath("../../MarginContainer5/Credits")
focus_previous = NodePath("../../MarginContainer4/Settings")
theme = ExtResource("6_c3bsr")
text = "Add to Wishlist!"

[node name="InputHint" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer6/Wishlist" unique_id=1307880168 instance=ExtResource("10_d3jgr")]
layout_mode = 1
anchors_preset = -1
offset_left = 500.0
offset_top = 72.0
offset_right = 500.0
offset_bottom = 72.0
hint_offset = Vector2(0, -8)

[node name="MarginContainer5" type="MarginContainer" parent="UiLayer/MarginContainer/VBoxContainer" unique_id=1464380807]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Credits" type="Button" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer5" unique_id=2078766907]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_next = NodePath("../../MarginContainer2/Exit")
focus_previous = NodePath("../../MarginContainer6/Wishlist")
theme = ExtResource("6_c3bsr")
text = "Credits"

[node name="InputHint" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer5/Credits" unique_id=1660365835 instance=ExtResource("10_d3jgr")]
layout_mode = 1
anchors_preset = -1
offset_left = 200.0
offset_top = 62.0
offset_right = 200.0
offset_bottom = 62.0
hint_offset = Vector2(0, -8)

[node name="MarginContainer2" type="MarginContainer" parent="UiLayer/MarginContainer/VBoxContainer" unique_id=876834707]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Exit" type="Button" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer2" unique_id=467831579]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
focus_neighbor_top = NodePath("../../MarginContainer5/Credits")
focus_neighbor_bottom = NodePath("../../../../Socials/MarginContainer/HBoxContainer/Steam")
focus_next = NodePath("../../../../Socials/MarginContainer/HBoxContainer/Steam")
focus_previous = NodePath("../../MarginContainer5/Credits")
theme = ExtResource("6_c3bsr")
text = "Exit"

[node name="InputHint" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer2/Exit" unique_id=124946402 instance=ExtResource("10_d3jgr")]
layout_mode = 1
anchors_preset = -1
offset_left = 200.0
offset_top = 62.0
offset_right = 200.0
offset_bottom = 62.0
hint_offset = Vector2(0, -8)

[node name="MarginContainer3" type="MarginContainer" parent="UiLayer/MarginContainer/VBoxContainer" unique_id=356306714]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="Version" type="Label" parent="UiLayer/MarginContainer/VBoxContainer/MarginContainer3" unique_id=1259840219]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "v. 20250916-demo"
label_settings = SubResource("LabelSettings_h1r82")

[node name="Socials" type="CenterContainer" parent="UiLayer" unique_id=443359347]
texture_filter = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="UiLayer/Socials" unique_id=1407393686]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UiLayer/Socials/MarginContainer" unique_id=1965386166]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Steam" type="LinkButton" parent="UiLayer/Socials/MarginContainer/HBoxContainer" unique_id=453266835]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../MarginContainer/VBoxContainer/MarginContainer2/Exit")
focus_next = NodePath("../Bsky")
focus_previous = NodePath("../../../../MarginContainer/VBoxContainer/MarginContainer2/Exit")
focus_mode = 2
action_mode = 0
uri = "https://store.steampowered.com/app/3001110"

[node name="Sprite2D" type="Sprite2D" parent="UiLayer/Socials/MarginContainer/HBoxContainer/Steam" unique_id=722909718]
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_bvnvu")
centered = false

[node name="Bsky" type="LinkButton" parent="UiLayer/Socials/MarginContainer/HBoxContainer" unique_id=1095711557]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../MarginContainer/VBoxContainer/MarginContainer2/Exit")
focus_next = NodePath("../Discord")
focus_previous = NodePath("../Steam")
focus_mode = 2
action_mode = 0
uri = "https://bsky.app/profile/vmikhav.bsky.social"

[node name="Sprite2D" type="Sprite2D" parent="UiLayer/Socials/MarginContainer/HBoxContainer/Bsky" unique_id=93398955]
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_ho80n")
centered = false

[node name="Discord" type="LinkButton" parent="UiLayer/Socials/MarginContainer/HBoxContainer" unique_id=174592714]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../MarginContainer/VBoxContainer/MarginContainer2/Exit")
focus_next = NodePath("../../../../MarginContainer/VBoxContainer/MarginContainer/Play")
focus_previous = NodePath("../Bsky")
focus_mode = 2
action_mode = 0
uri = "https://discord.gg/yfGh8Y86"

[node name="Sprite2D" type="Sprite2D" parent="UiLayer/Socials/MarginContainer/HBoxContainer/Discord" unique_id=1608033972]
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_h1r82")
centered = false

[node name="SceneTransition" parent="UiLayer" unique_id=1102741998 instance=ExtResource("4_lkwgi")]

[node name="SettingsMenu" parent="UiLayer" unique_id=979793166 instance=ExtResource("14_d3jgr")]
visible = false
z_index = 20
size_flags_horizontal = 3
size_flags_vertical = 3
